Removed unnecessary code, renamed componenets

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "https://localhost:44345/"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLExpress;Database=NoteAppDB;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=NoteAppDB;Integrated Security=True;"
   }
 }
