--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>ff23d0c6-510f-4cab-9293-777428304f07</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
