composer file fix connetion string

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "5062:80"
       - "5025:443"
     environment:
-      ConnectionStrings__DefaultConnection: Data Source=.\SQLEXPRESS;Initial Catalog=NoteAppDb; Encrypt=False; MultipleActiveResultSets=True; Integrated Security=True
+      ConnectionStrings__DefaultConnection: Data Source=sql_server2022;Initial Catalog=NoteAppDb;User Id=SA;Password=Password123;MultipleActiveResultSets=true;Encrypt=False
       Jwt__Key: <randomKeyAtLeast128CharLongForExampleKRtUr30X3F3F173B63IEN9RCsNc6OnxPj6BT5rjEwTinRjvxIg>
       Jwt__ValidMinutes: 60
       Jwt__Issuer: https://localhost:44345/
