--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,4 +21,5 @@ RUN dotnet publish "./backend.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+USER $APP_UID
 ENTRYPOINT ["dotnet", "backend.dll"]
