--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,9 +1,10 @@
 server {
   listen 3000;
 
+  root /usr/share/nginx/html/;
+  index index.html;
+
   location / {
-    root /usr/share/nginx/html/;
-    index  index.html index.htm;
     try_files $uri $uri/ /index.html;
   }
 }
